# hello-go-project/myfatoorahInstallment/cmd/api/main.go
@@ -1,9 +1,12 @@
 package main
 
 import (
+	"fmt"
+	_ "hello-go-project/myfatoorahInstallment/cmd/api/docs"
 	"hello-go-project/myfatoorahInstallment/internal/database"
 	"hello-go-project/myfatoorahInstallment/internal/handlers"
 	"log"
+	"os"
 
 	"github.com/gin-gonic/gin"
 	"github.com/joho/godotenv"
@@ -28,5 +31,17 @@ func main() {
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	r.POST("/sessions", handlers.CreateSessionHandler(db))
+	r.POST("/sessions/initiate", handlers.CreateSessionHandler(db))
+	r.POST("/sessions/execute", handlers.UpdateSessionToTokenized(db))
+
+	r.GET("/customers/getall", handlers.GetAllCustomers(db))
+	r.POST("/customers", handlers.CreateCustomer(db))
+
+	r.POST("/index.php", handlers.MyFatoorahWebhook(db))
+
+	port := os.Getenv("PORT")
+	if port == "" {
+		port = "9090"
+	}
+	r.Run(fmt.Sprintf(":%s", port))
 }
