# hello-go-project/myfatoorahInstallment/internal/dto/request/create_session.go
@@ -1,6 +1,8 @@
 package request
 
+import "github.com/google/uuid"
+
 type CreateSessionRequest struct {
-	PaymentMethodId    float64 `json:"payment_method_id"`
-	CustomerIdentifier string  `json:"customer_id"`
+	PaymentMethodId    float64   `json:"payment_method_id"`
+	CustomerIdentifier uuid.UUID `json:"customer_id"`
 }
