# hello-go-project/myfatoorahInstallment/internal/dto/response/create_customer.go
@@ -1,0 +1,15 @@
+package response
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type CustomerResponse struct {
+	ID        uuid.UUID `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	Phone     string    `json:"phone"`
+	CreatedAt time.Time `json:"created_at"`
+}
